--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://javierFili.github.io/calculadoradigital",
+  "homepage": "https://javierFili.github.io/cientifica",
   "name": "calculadoradigital",
   "version": "0.1.0",
   "private": true,
